# dd_seqalign

./: .gitignore  README.en.md  README.jp.md  README.md  app.py  pyproject.toml
dd_seq/: activesite.py  cli.py  dashboard.py  pipeline.py  scene.py  seqplot.py  structalign.py
dd_seqalign/: __init__.py  activesite.py  cli.py  dashboard.py  fetch.py  pdbio.py  pipeline.py  pocket.py  scene.py  sequence.py  structalign.py
dd_viewer/: __init__.py  cli.py  component.py  dashboard.py  interactions.py  io.py  scene.py  scoring.py
dd_viewer/frontend/: index.html
tests/: conftest.py  test_interactions_contacts.py  test_interactions_geometry.py  test_io_integration.py  test_scene.py  test_scoring.py  test_sequence.py
tests/dd_viewer_data/: 6W63_ligand_ref.sdf  6W63_redock.sdf
