[project]
name = "dd_seqalign"
version = "0.1.0"
description = "Compare all known structures (PDB + AlphaFold DB) of a protein: sequence coverage vs. the canonical UniProt sequence, and active-site-based structural (RMSD) alignment, with interactive visualization"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["biopython", "pandas", "numpy", "dd_prep", "dd_af", "pymol"]

[project.optional-dependencies]
app = ["streamlit", "py3Dmol", "matplotlib"]

[project.scripts]
dd_seqalign-fetch = "dd_seqalign.cli:main_fetch"
dd_seqalign-align = "dd_seqalign.cli:main_align"
dd_seqalign-run = "dd_seqalign.cli:main_run"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dd_seqalign", "dd_viewer"]
